--- a/security.html
+++ b/security.html
@@ -61,7 +61,7 @@
             .threat {
                 text-transform: uppercase;
                 text-align: left;
-                color: crimson;   
+                color: crimson;
             }
             .concern {
                 text-transform: uppercase;
@@ -81,7 +81,7 @@
                 margin-left: 50px;
                 font-family: sans-serif;
                 display: inline;
-            }       
+            }
         </style>
 
         <!--[if lt IE 9]>
@@ -134,7 +134,7 @@
                         <li class="fragment">Run capture system in isolated sandbox</li>
                     </ul>
                 </section>
-                     
+
                 <section>
                     <p class="concern">Concern: URL rewriting</p>
                     <ul>
@@ -277,13 +277,13 @@
 
     <!-- Footer -->
     <div style="position:absolute; bottom:1%; left:2%; width:100%; vertical-align: middle">
-        <a href="https://webrecorder.io/"><img style="vertical-align: middle; width: 48px; height: 48px" src="img/wr-logo.png">
-        <img style="vertical-align: middle" width="18%" src="img/wr-text.png"></a>
+        <a href="https://webrecorder.io/"><img style="vertical-align: middle; width: auto; height: 60px" src="img/Webrecorder_logo_text-shaded.png"></a>
+        <!-- <img style="vertical-align: middle" width="18%" src="img/wr-text.png"> -->
         <!--<span class="footer-links">
             <a href="https://webrecorder.io/" target="_blank">webrecorder.io</a><br/>
             <a href="http://rhizome.org/" target="_blank">rhizome.org</a>
         </span>-->
-        <a href="https://perma.cc/"><img style="vertical-align: middle" src="img/perma_logo.png"/></a>
+        <a href="https://perma.cc/"><img style="vertical-align: middle; width: auto; height: 60px" src="img/Perma-cc_412px.png"/></a>
         <p class="footer-text">Web Archive Security</p>
         <!--<span class="footer-links">
             <a href="https://perma.cc/" target="_blank">Perma.cc</a>
