remove footer, switch order

--- a/security.html
+++ b/security.html
@@ -7,7 +7,7 @@
         <title>Web Archive Security</title>
 
         <meta name="description" content="Web Archives Security">
-        <meta name="author" content="Ilya Kreymer, Jack Cushman">
+        <meta name="author" content="Jack Cushman, Ilya Kreymer">
 
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -98,8 +98,8 @@
                 <section>
                     <h4>Thinking like a hacker:</h4>
                     <h3>Security considerations for<br/>High-Fidelity Web Archives</h3>
-                    <p>Ilya Kreymer, Webrecorder</p>
                     <p>Jack Cushman, Perma.cc</p>
+                    <p>Ilya Kreymer, Webrecorder</p>
                 </section>
 
                 <section>
@@ -304,7 +304,7 @@
             <a href="http://rhizome.org/" target="_blank">rhizome.org</a>
         </span>-->
         <a href="https://perma.cc/"><img style="vertical-align: middle; width: auto; height: 60px" src="img/Perma-cc_412px.png"/></a>
-        <p class="footer-text">Web Archive Security</p>
+        <!--<p class="footer-text">Web Archive Security</p>-->
         <!--<span class="footer-links">
             <a href="https://perma.cc/" target="_blank">Perma.cc</a>
         </span>-->
