Updating bullet style.

--- a/security.html
+++ b/security.html
@@ -293,7 +293,7 @@
                     </ul>
                 </section>
                 <section>
-                    <h3>Thank you!</h3>
+                    <h3 style="margin-top:15%">Thank you!</h3>
                     <br/>
                     <h4>Questions?</h4>
                 </section>
