--- a/security.html
+++ b/security.html
@@ -292,7 +292,10 @@
                     <ul>
                         <li class="fragment">Pages can dynamically edit the archive's banner</li>
                     </ul>
-                    <p class="miti fragment"><span class="caps-label">Mitigation:</span>Use iframes for replay</p>
+					<p class="fragment"><img src="img/perma_fake.png"></p>
+				</section>
+				<section>
+                    <p class="miti"><span class="caps-label">Mitigation:</span>Use iframes for replay</p>
                     <ul>
                         <li class="fragment">Don't inject banner into replay frame</li>
                         <li class="fragment">Use <span class="url">X-Frame-Options</span> header to limit embedding</li>
@@ -301,9 +304,7 @@
                     </ul>
                     <p class="miti fragment"><span class="caps-label">Mitigation:</span> Run archive in containerized/proxy mode browser</p>
                     <p class="miti fragment"><span class="caps-label">Mitigation:</span> Display rendered DOM and strip javascript (archive.is)</p>
-                </section>
-
-
+				</section>
                 <section>
                     <h3 style="margin-top:12%">What's next?</h3>
                     <ul>
