--- a/security.html
+++ b/security.html
@@ -122,13 +122,13 @@
                 </section>
 
                 <section>
-                    <h3>Why is security a concern?</h3>
+                    <h3>Why is security a concern in a web archive?</h3>
                     <ul>
                         <li class="fragment strike">Web Archives just collection of old pages</li>
                         <li class="fragment extra-extra-pad"><b>High-Fidelity web archives run untrusted web software</b></li>
                         <li class="fragment strike">Live site is "safe", so nothing to worry about</li>
                         <li class="fragment extra-extra-pad"><b>Web archive replay can pose new security risks</b></li>
-                        <li class="fragment strike">It's loading from an archive, so that's what the page looked like</li>
+                        <li class="fragment strike">Pages in web archives are always reliable</li>
                         <li class="fragment"><b>Replay issues side, page loaded from an archive could intentionally deceive</b></li>
                     </ul>
                 </section>
